--- a/TongHopGK/src/main/resources/templates/FrontEnd.html
+++ b/TongHopGK/src/main/resources/templates/FrontEnd.html
@@ -1,18 +1,70 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fragment Example</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .header {
+            background-image: url('your-image-url.jpg');
+            background-size: cover;
+            height: 100px;
+        }
+        .footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
 </head>
 <body>
-	<div th:fragment="dauTrang">
-		HTML header
-	</div>
-	<div th:fragment="chanTrang">
-		HTML footer
-	</div>
-	<div th:fragment="sideBar">
-		HTML side
-	</div>
+    <div class="header">
+        <img src="" alt="Header Image" class="img-fluid w-100">
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#list">List</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#addnew">Add New</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-8">
+                <h2>Main Content</h2>
+                <p>This is the main content area.</p>
+            </div>
+            <div class="col-md-4">
+                <img src="your-image-url.jpg" alt="Image" class="img-fluid">
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Footer Content</p>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
