--- a/TongHopGK/src/main/resources/templates/FrontEnd.html
+++ b/TongHopGK/src/main/resources/templates/FrontEnd.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragment Example</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .header {
+     .header {
             background-image: url('your-image-url.jpg');
             background-size: cover;
             height: 100px;
@@ -20,13 +20,23 @@
             width: 100%;
             bottom: 0;
         }
+        .navbar-nav {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
+        .nav-item {
+            flex: 1;
+            text-align: center;
+        }
+  
     </style>
 </head>
 <body>
-    <div class="header">
-        <img src="" alt="Header Image" class="img-fluid w-100">
+    <div th:fragment ="header" class="header">
+        <img src="" alt="Header Image"  >
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav th:fragment ="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -34,22 +44,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#home">Home</a>
+                        <a class="nav-link" href="home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#list">List</a>
+                        <a class="nav-link" href="List">List</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#addnew">Add New</a>
+                        <a class="nav-link" href="Addnew">Add New</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container mt-4">
+    <div th:fragment ="content" class="container mt-4">
         <div class="row">
             <div class="col-md-8">
                 <h2>Main Content</h2>
@@ -60,7 +70,7 @@
             </div>
         </div>
     </div>
-    <div class="footer">
+    <div th:fragment ="footer" class="footer">
         <p>Footer Content</p>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
