--- a/nguyenthanhnghia_thigiuaki/src/main/resources/templates/topic.html
+++ b/nguyenthanhnghia_thigiuaki/src/main/resources/templates/topic.html
@@ -100,7 +100,7 @@
                     <form th:action="@{/topic/new}" method="post">
                         <div class="mb-3">
                             <label for="id" class="form-label">Topic ID</label>
-                            <input type="number" class="form-control" id="id" name="id" required>
+                            <input type="text" class="form-control" id="id" name="id" required>
                             <div class="form-text">Enter a unique ID for the topic</div>
                         </div>
                         <div class="mb-3">
@@ -113,7 +113,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="supervisorId" class="form-label">Supervisor ID</label>
-                            <input type="number" class="form-control" id="supervisorId" name="supervisorId" required>
+                            <input type="text" class="form-control" id="supervisorId" name="supervisorId" required>
                         </div>
                         <div class="mb-3">
                             <label for="topicType" class="form-label">Topic Type</label>
@@ -140,8 +140,8 @@
                 <div class="modal-body">
                     <form th:action="@{/topic/view/id}" method="get">
                         <div class="mb-3">
-                            <label for="viewId" class="form-label">Enter Topic ID to View</label>
-                            <input type="number" class="form-control" id="viewId" name="id" required>
+                            <label for="viewId" class="form-label">Topic ID</label>
+                            <input type="text" class="form-control" id="viewId" name="viewId" required>
                         </div>
                         <div class="d-flex justify-content-end gap-2">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -164,8 +164,8 @@
                 <div class="modal-body">
                     <form th:action="@{/topic/edit/id}" method="get">
                         <div class="mb-3">
-                            <label for="editId" class="form-label">Enter Topic ID to Edit</label>
-                            <input type="number" class="form-control" id="editId" name="id" required>
+                            <label for="editId" class="form-label">Topic ID</label>
+                            <input type="text" class="form-control" id="editId" name="editId" required>
                         </div>
                         <div class="d-flex justify-content-end gap-2">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -188,8 +188,8 @@
                 <div class="modal-body">
                     <form th:action="@{/topic/delete/id}" method="get">
                         <div class="mb-3">
-                            <label for="deleteId" class="form-label">Enter Topic ID to Delete</label>
-                            <input type="number" class="form-control" id="deleteId" name="id" required>
+                            <label for="deleteId" class="form-label">Topic ID</label>
+                            <input type="text" class="form-control" id="deleteId" name="deleteId" required>
                         </div>
                         <div class="d-flex justify-content-end gap-2">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
