--- a/nguyenthanhnghia_thigiuaki/src/main/resources/templates/frontEnd.html
+++ b/nguyenthanhnghia_thigiuaki/src/main/resources/templates/frontEnd.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="/topics/add">
                         <i class="fas fa-plus"></i> Topic Add New
                     </a>
-                    <a class="nav-link" href="/students">
+                    <a class="nav-link" href="/student/all">
                         <i class="fas fa-users"></i> Student List
                     </a>
                     <a class="nav-link" href="/students/add">
